--- a/assets/css/cssBootstrap.css
+++ b/assets/css/cssBootstrap.css
@@ -1,21 +1,27 @@
 .login-container {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 3%;
+  margin-bottom: 0%;
 }
+
+/* aqui é a imagem do centro */
 .login-logo {
   position: relative;
   margin-left: -41.5%;
 }
-.login-logo img {
+
+/* aqui é a imagem do centro */
+.login-logo {
   position: absolute;
-  width: 20%;
-  margin-top: 19%;
-  background: #282726;
-  border-radius: 150px;
-  padding: 5%;
+  width: 16%;
+  margin-top: 22%;
+  background: white;
+  border-radius: 100px;
+  padding: 2%;
+  margin-left: -121px;
 }
+
 .login-form-1 {
-  padding: 9%;
+  padding: 7%;
   background: #282726;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
@@ -25,7 +31,7 @@
   color: #fff;
 }
 .login-form-2 {
-  padding: 9%;
+  padding: 7%;
   background: #f05837;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
@@ -44,10 +50,6 @@
   padding: 2%;
 }
 
-.btnSubmit:hover {
-  /* background-color: #f05837; */
-}
-
 .btnForgetPwd {
   color: #fff;
   font-weight: 600;
@@ -56,4 +58,52 @@
 .btnForgetPwd:hover {
   text-decoration: none;
   color: #fff;
+}
+
+/* redesSociais */
+p {
+  color: white;
+}
+.redesSociais {
+  margin-top: 130px;
+  margin-bottom: -280px;
+}
+.facebook {
+  color: blue;
+  margin-left: 10px;
+}
+.instagram {
+  color: orange;
+  margin-left: 10px;
+}
+.whats {
+  color: green;
+  margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: #f05837;
+}
+
+/* parte do quem somos */
+
+.quemSomos {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.display-4 {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.imgEquipe {
+  text-align: center;
+  margin-top: 10px;
+  width: 100px;
+  height: 100px;
+  border-radius: 300px;
 }
